feat: add new skeleton screens and components to suspense loading

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.4",
     "react-input-mask": "^2.0.4",
+    "react-loading-skeleton": "^3.4.0",
     "sonner": "^1.4.41",
     "tailwind-scrollbar": "^3.1.0",
     "zod": "^3.23.6"
